[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/v1/rifle2.png" type="Texture" id=1]
[ext_resource path="res://assets/v1/rifle2shooting2.png" type="Texture" id=2]
[ext_resource path="res://Player/Arm.gd" type="Script" id=24]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 44 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 24, 44 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 24, 44 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "shooting",
"speed": 5.0
} ]

[node name="Arm" type="Node2D"]
script = ExtResource( 24 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 6, 1 )
rotation = 4.71239
frames = SubResource( 3 )
animation = "shooting"
speed_scale = 2.0

[node name="BulletSpawnPoint" type="Node2D" parent="."]
position = Vector2( 23.0797, 0.139185 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
